# game_server

./: README.en.md  README.md
server/: CMakeLists.txt
server/battle/: CMakeLists.txt  main.cc
server/battle/controller/: controller.cc  controller.hh
server/battle/listen/: battle_listen.cc  battle_listen.hh
server/battle/node_module/: grid_aoi_node.cc  grid_aoi_node.hh  node.hh
server/battle/object_manager/: entities_redis.cc  entities_redis.hh  move.hh  object.hh  object_manager.cc  object_manager.hh
server/common/: authenticate.hh  concurrent_map.hh  etcd.hh  internal_tcp.hh  log.hh  memory_reuse.hh  mysql.hh  protocol.hh  redis.hh  redis_store_name.hh  router_id.hh  util.hh  world.hh
server/gateway/: CMakeLists.txt  main.cc
server/gateway/authentication/: authentication.cc  authentication.hh
server/gateway/concurrent_map/: concurrent_map.hh
server/gateway/controller/: gateway_controller.cc  gateway_controller.hh
server/gateway/listen/: gateway_listen.cc
server/gateway/route/: route.cc  route.hh
server/gateway/service/: gateway_service.cc  gateway_service.hh
server/gateway/thread_local_store/: thread_local_store.hh
server/login_server/: CMakeLists.txt  login.cc  login.hh  main.cc  test.cc  user_operator.hh  user_redis.h
server/login_server/http/: http.hh
server/login_server/service/: login.cc  login.hh
server/login_server/user/: user_operator.hh
server/odb/: user.hh
server/proto/: CMakeLists.txt  auth.proto  common.proto  envelope.proto  forward.proto  ids.proto  internal.proto  logic.proto  login.proto  move.proto  skill.proto  state.proto  work.md
server/proto/test/: client_etcd.cc  tcp_test.cc
server/test/: CMakeLists.txt  auto.cc  generate.cc  manual.cc  server_etcd.cc  test  test.cc
